# cp-workbench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy-full-src  fresh-slate  generate-problem-files  start-parser.sh  template.cpp  test-samples.sh
atcoder/: combinatorics.hpp  dag.hpp  fenwicktree.hpp  lazysegtree.hpp  link_cut_splay.hpp  matrix_exp.hpp  prime_sieve.hpp  segtree.hpp  sparse_table.hpp  tensor.hpp  tree.hpp  y_combinator.hpp
brute-testing/: gen-template.cpp  test-brute.sh
cp-parser/: README.md  build.gradle  settings.gradle
cp-parser/src/main/java/parser/: Main.java
cpp-build/: cpp_build  perf_build
testing/: gen.cpp  test.sh
